Hungry blast first Section added

--- a/index.html
+++ b/index.html
@@ -6,8 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hungry Blast</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
 </head>
 <body>
+
+  <section class="flexible-container">
+    <div class="Width-divide">
+        <h1><span class="color-picker">Choose</span> Healthy</h1>
+        <h1>Stay Healthy, Eat Healthy</h1>
+        <h1>with a huge<span class="color-picker"> Hungry Blast</span></h1>
+        <p>Are you upset with a Sad tummy? Tension not. Let's fight with your Appetize with exciting healthy Food recipes.</p>
+       <a class="link-button" target="_blank" href="">READ RECIPE</a>
+    </div>
+    <div class="Width-divide">
+        <img src="images/girl/first-bg.png" alt="Healthy starter">
+    </div>
+  </section>
+   
     
 </body>
 </html>
