Hungry Blast About Section Added

--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@
         <img src="images/girl/first-bg.png" alt="Healthy starter">
     </div>
   </section>
+
+  <section class="flexible-container set-background">
+      <div class="Width-divide">
+        <img src="images/girl/female_bg.png" alt="About Food Blast">
+      </div>
+
+      <div class="Width-divide">
+
+        <h2 class="set-font">About Hungry Blast</h2>
+        <p>Hungry Blast is your Tummy Doctor. We Emphasise on Healthy food style. Our Website is worked for do the best practice on healthy food and always satisfied your tummy. Here we add healthy recipes for you people to satisfy your tummy on dead night. We also start the healthy resturant initiative and we will start to give service to you guys to deal with your hungry tummy. </p>
+
+         <a class="link-button" target="_blank" href="https://www.google.com/">VISIT US</a>
+      </div>
+
+  </section>
    
     
 </body>
