--- a/index.html
+++ b/index.html
@@ -33,11 +33,39 @@
       <div class="Width-divide">
 
         <h2 class="set-font">About Hungry Blast</h2>
-        <p>Hungry Blast is your Tummy Doctor. We Emphasise on Healthy food style. Our Website is worked for do the best practice on healthy food and always satisfied your tummy. Here we add healthy recipes for you people to satisfy your tummy on dead night. We also start the healthy resturant initiative and we will start to give service to you guys to deal with your hungry tummy. </p>
+        <p class="set-paragraph">Hungry Blast is your Tummy Doctor. We Emphasise on Healthy food style. Our Website is worked for do the best practice on healthy food and always satisfied your tummy. Here we add healthy recipes for you people to satisfy your tummy on dead night. We also start the healthy resturant initiative and we will start to give service to you guys to deal with your hungry tummy. </p>
 
          <a class="link-button" target="_blank" href="https://www.google.com/">VISIT US</a>
       </div>
+  </section>
 
+ 
+  <section class="recipe-container">
+
+
+    <h2 class="set-font">Our Recipes</h2>
+    <p id="align-the-text">We go through with experiments before uploading this recipes to the website.<br> We consider the good food with good combination of all iteams as well.After<br> trying our recipes you will get an another level taste to satisfy your upset <br>tummy and awaiting tounge to taste something new.</p>
+
+<div class="flexible-container">
+
+    <div  class="recipe-item">
+        <img src="images/food/egg.jpeg" alt="Boiled Egg">
+        <h3><b>Steamed Egg</b></h3>
+        <p class="set-paragraph">Gather the ingredients.In a heat-safe bowl—porcelain or stoneware work best—whisk together the eggs, water, scallions, and salt until fully combined.If using a microwave, cover the bowl with a plate and cook for 4 minutes.If steaming on a stovetop, add the bowl to a steamer and steam for 10 minutes over medium-high heat.............</p>
+    </div>
+ 
+    <div class="recipe-item">
+      <img src="images/food/pasta.jpeg" alt="White Sauce Pasta">
+     <h3><b>White Sauce Pasta</b></h3>
+     <p class="set-paragraph">Melt butter and margarine in a saucepan over medium-low heat; stir in flour and bouillon until roux is well blended. Continue to cook and stir until thickened and lightly browned, about 5 minutes. Increase heat to medium and whisk water into roux until smooth. Stir in milk; cook and stir until thickened, about 2 minutes more. Season with white pepper.</p>
+ </div>
+ 
+ <div class="recipe-item">
+     <img  src="images/food/fry.jpeg" alt="Fried Chicken">
+     <h3><b>Fried Chicken</b></h3>
+     <p class="set-paragraph">Combine cornstarch, sugar, flour, salt, and monosodium glutamate in a large bowl. Add eggs, green onions, soy sauce, and garlic. Pat chicken dry and add to the sauce. Cover and refrigerate until marinated, 8 hours to overnight.Heat oil in a deep-fryer or large saucepan to 350 degrees F (175 degrees C). Fry chicken in the hot oil until golden brown, 15 to 25 minutes. An instant-read thermometer inserted near the bone should read 165 degrees F (74 degrees C).</p>
+ </div>
+</div>
   </section>
    
     
