--- a/index.html
+++ b/index.html
@@ -68,6 +68,29 @@
 </div>
   </section>
    
+
+  <section class="flexible-container">
+      <div class="follower-item">
+          <h1>700k</h1>
+          <h4>Youtube Subscribers</h4>
+      </div>
+      <div class="follower-item">
+        <h1>2.4m</h1>
+        <h4>Instagram Followers</h4>
+    </div>
+    <div class="follower-item">
+        <h1>100K</h1>
+        <h4>Dribble shot likes</h4>
+    </div>
+
+  </section>
+
+  <footer>
+
+    <h1><span class="color-picker">Hungry </span>Blast</h1>
+    <h4>Smile larger, Be humble, Eat Healthy</h4>
+
+   </footer>
     
 </body>
 </html>
