Navigation bar added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
 </head>
 <body>
+    <section class="navbar-item">
+        <nav class="navbar">
+            <ul>
+                <li><a target="_blank" href="https://smritysarkar.github.io/Hungry-Blast/">Home</a></li>
+                <li><a href="#">Recipes</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Sign Up</a></li>
+                <li><a href="#">Sign In</a></li>
+            </ul>
+            
+        </nav>
+    </section>
+
 
   <section class="flexible-container">
     <div class="Width-divide">
@@ -84,6 +97,7 @@
     </div>
 
   </section>
+  
 
   <footer>
 
